Solved scrollbar issue. Scrollbar wired to theme and fully customized.

--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -13,6 +13,7 @@
     width: 15.875rem;
     height: 100%;
     position: fixed;
+    z-index: 1000;
 }
 
 .appbar {
